feat(agent): Update the ASK_SYSTEM_PROMPT to specify that the assistant must base its responses on the contents of the local directory